[x] Add new Crud methods